# Zonos

./: .gitignore  Dockerfile  README.md  cache_params.py  docker-compose.yml  for-dev_docker-compose.yml  gradio_interface.py  pyproject.toml  zonos_api.py  zonos_fast_api.py
zonos/: model.py  speaker_cloning.py
