[project]
name = "zonos"
version = "0.1.0"
description = "Text-to-speech by Zyphra"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    # Core ML/Audio dependencies
    "torch>=2.5.1",              # Used across most files for ML operations
    "torchaudio>=2.5.1",        # Used in zonos_api.py, speaker_cloning.py for audio processing
    "transformers>=4.48.1",      # Used in autoencoder.py for DAC model
    "safetensors>=0.4.1",       # Used in model.py for loading model weights
    "huggingface-hub>=0.28.1",  # Used in model.py for downloading models
    
    # FastAPI related
    "fastapi>=0.68.0",          # Used in zonos_api.py for API framework
    "uvicorn>=0.15.0",          # Used in zonos_api.py for serving the API
    "pydantic>=2.0.0",          # Used in zonos_api.py for request/response models
    
    # Text processing
    "inflect>=7.5.0",           # Used in conditioning.py for text normalization
    "kanjize>=1.5.0",           # Used in conditioning.py for Japanese text
    "phonemizer>=3.3.0",        # Used in conditioning.py for phoneme conversion
    "sudachipy>=0.6.10",        # Used in conditioning.py for Japanese tokenization
    "sudachidict-full>=20241021", # Used in conditioning.py for Japanese dictionary
    
    # Utilities
    "numpy>=2.2.2",             # Used across files for numerical operations
    "tqdm>=4.66.1",             # Used in model.py for progress bars

    # Other
    "setuptools",
    "packaging",   
    "soundfile>=0.13.1",
    "gradio>=5.15.0",
]

# These are technically optional, but mamba-ssm is required to run hybrid models.
[project.optional-dependencies]
compile = [
    "flash-attn>=2.7.3",        # Used in backbone/_torch.py for attention computation
    "mamba-ssm>=2.2.4",         # Used in backbone/_mamba_ssm.py for SSM layers
    "causal-conv1d>=1.5.0.post8", # Used in backbone implementations
]

[tool.setuptools.packages.find]
include = ["zonos"]

[tool.uv]
no-build-isolation-package = ["flash-attn", "mamba-ssm", "causal-conv1d"]

[tool.ruff]
line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"